--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 	text-decoration: none;
 	margin-right: 5rem;
 }
-@media only screen and (max-width: 37.5em) {
+@media only screen and (max-width: 60.5em) {
 	.navigation__item {
 		display: block;
 		width: 100%;
@@ -43,8 +43,8 @@
 	opacity: 1;
 	font-size: 200%;
 	text-decoration: none;
-height: 100%;
-padding: 1rem 0;
+	height: 100%;
+	padding: 2rem 0;
 }
 .navigation__link:hover,
 .navigation__link:active {
@@ -65,8 +65,7 @@ padding: 1rem 0;
 	align-items: center;
 	justify-content: space-between;
 	box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.5);
-	background-image:
-	 linear-gradient(
+	background-image: linear-gradient(
 			to bottom,
 			rgba(80, 251, 97, 0.4),
 			rgba(49, 133, 252, 0.1)
@@ -91,6 +90,12 @@ padding: 1rem 0;
 	/* width: 7rem; */
 	height: 7rem;
 }
+@media only screen and (max-width: 37.5em) {
+	.header__logo {
+		width: 30rem;
+		height: auto;
+	}
+}
 .header__text-box {
 	position: absolute;
 	top: 40%;
@@ -110,8 +115,7 @@ padding: 1rem 0;
 	flex-direction: column;
 	align-items: center;
 	background-color: #ff7730;
-	background-image:
-	 linear-gradient(
+	background-image: linear-gradient(
 			to bottom,
 			rgba(80, 251, 97, 0.4),
 			rgba(49, 133, 252, 0.1)
@@ -120,7 +124,7 @@ padding: 1rem 0;
 	padding: 2rem 2rem;
 	margin-top: -1rem;
 	font-size: 1.4rem;
-		background-size: cover;
+	background-size: cover;
 	background-position: center center;
 }
 .footer__columns {
@@ -266,25 +270,20 @@ padding: 1rem 0;
 	}
 }
 .about__img {
-	
 	width: 100%;
 	border-radius: 2rem;
-
 }
 .about__composition {
 	border-radius: 0.3rem;
 	position: relative;
-	
 }
 .about__composition-photo {
 	border-radius: 0.9rem;
 	transition: transform 0.2s ease;
 	width: 49%;
-
 }
 .about__composition-photo--p1 {
 	overflow: visible;
-	
 }
 .about__composition-photo--p1:hover {
 	transform: scale(2) translate(4rem, 3rem);
@@ -296,8 +295,9 @@ padding: 1rem 0;
 	width: 99%;
 }
 .about__composition-photo--p2 {
-	height:18rem;	position: relative;
-		z-index: 1000;
+	height: 18rem;
+	position: relative;
+	z-index: 1000;
 }
 .about__list {
 	padding-left: 7rem;
@@ -445,7 +445,7 @@ padding: 1rem 0;
 	color: #82b4ff;
 }
 .btn-up__link:hover,
-.btn-up__linkactive {
+.btn-up__link:active {
 	color: #3185fc;
 }
 
@@ -628,11 +628,6 @@ padding: 1rem 0;
 }
 
 .adress__heading {
-	background-image: linear-gradient(
-		to right bottom,
-		#3185fc,
-		rgba(125, 125, 125, 0.3)
-	) !important;
 }
 
 .adress_right-column {
@@ -1029,7 +1024,7 @@ section:not(:last-child) {
 	border-bottom: solid 3px darkgrey;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1150px) {
 	.btn-menu {
 		display: block;
 		color: #fff;
