--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,12 @@
 	.navigation__item {
 		display: block;
 		width: 100%;
-		
 	}
-		
 }
 @media only screen and (min-width: 80em) {
 	.navigation__item {
 		font-size: 1.5rem;
 	}
-
 }
 .navigation__link:link,
 .navigation__link:visited {
@@ -70,19 +67,19 @@
 	justify-content: space-between;
 	background-image: linear-gradient(
 			to bottom,
-			rgba(0, 71, 171, .7),
+			rgba(0, 71, 171, 0.7),
 			rgba(49, 133, 252, 0.1)
 		),
 		url(https://images.unsplash.com/photo-1597227093570-eccc70d8a416?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
 	background-size: cover;
 	background-position: center center;
-	     -webkit-clip-path: polygon(0 0, 100% 0, 100% 15vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 19vh, 0 100%);
-        height: 20vh;
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 15vh, 0 100%);
+	clip-path: polygon(0 0, 100% 0, 100% 19vh, 0 100%);
+	height: 20vh;
 }
 .header__logo-box {
 	position: static;
-	top: .5rem;
+	top: 0.5rem;
 	left: 1rem;
 	padding: 1rem;
 	align-self: flex-start;
@@ -128,7 +125,7 @@
 	background-color: #ff7730;
 	background-image: linear-gradient(
 			to bottom,
-			rgba(0, 71, 171, .7),
+			rgba(0, 71, 171, 0.7),
 			rgba(49, 133, 252, 0.1)
 		),
 		url(https://images.unsplash.com/photo-1597227093570-eccc70d8a416?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
@@ -743,7 +740,6 @@
 	margin: 0 auto;
 	margin-top: -30rem;
 	min-height: 75vh;
-	
 }
 @media only screen and (max-width: 75em) {
 	.section-about {
@@ -983,7 +979,10 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-
+html,
+body {
+	overflow-x: hidden;
+}
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
@@ -1021,7 +1020,8 @@ html {
 
 body {
 	box-sizing: border-box;
-	background-color:rgba(247, 247, 247, 0.95);
+	background-color: rgba(247, 247, 247, 0.95);
+	overflow-x: hidden;
 }
 
 .main-container {
@@ -1053,11 +1053,11 @@ section:not(:last-child) {
 	.btn-menu:hover {
 		background-color: rgba(34, 0, 255, 0.8);
 	}
-	.header{
-		    -webkit-clip-path: polygon(0 0, 100% 0, 100% 13vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 13vh, 0 100%);
-        height: 15vh;
-		transition: all 200ms	ease;
+	.header {
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 13vh, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 13vh, 0 100%);
+		height: 15vh;
+		transition: all 200ms ease;
 	}
 	.header__logo-box {
 		position: absolute;
@@ -1070,7 +1070,7 @@ section:not(:last-child) {
 	}
 	.navigation__list {
 		transform: translateY(-150%);
-		height:0;
+		height: 0;
 		opacity: 0;
 		text-align: center;
 		flex-direction: column;
@@ -1090,16 +1090,15 @@ section:not(:last-child) {
 	}
 	.navigation__list.active {
 		display: flex;
-		transition: all .2s ease;
+		transition: all 0.2s ease;
 		transform: translateY(0);
 		opacity: 1;
 		height: auto;
 	}
-	.header.active{
-			    -webkit-clip-path: polygon(0 0, 100% 0, 100% 42vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 42vh, 0 100%);
-		     height: 48vh;
-
+	.header.active {
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 42vh, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 42vh, 0 100%);
+		height: 48vh;
 	}
 }
 
@@ -1147,13 +1146,13 @@ body {
 	text-transform: uppercase;
 	font-weight: 700;
 	transform: skew(30px 30px);
-	color: #0047AB;
+	color: #0047ab;
 	transition: all 0.2s ease;
 	letter-spacing: 2px;
 }
 @supports (-webkit-background-clip: text) {
 	.heading-secondary {
-		background-image: linear-gradient(to right, #c5deff, #0047AB);
+		background-image: linear-gradient(to right, #c5deff, #0047ab);
 		-webkit-background-clip: text;
 		color: transparent;
 	}
@@ -1297,75 +1296,63 @@ body {
 	}
 }
 
-
 .container {
-  width: 80vw;
-  margin: 4rem auto; 
+	width: 80vw;
+	margin: 4rem auto;
 }
 
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 5vw);
-  grid-gap: 1.5rem; 
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	grid-template-rows: repeat(8, 5vw);
+	grid-gap: 1.5rem;
 }
 
 .gallery__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block; 
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
 }
 
 .gallery__item--1 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
-
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 3;
 }
 
 .gallery__item--2 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 3;
-
-
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 3;
 }
 
 .gallery__item--3 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 1;
-  grid-row-end: 6;
-
- 
+	grid-column-start: 5;
+	grid-column-end: 9;
+	grid-row-start: 1;
+	grid-row-end: 6;
 }
 
 .gallery__item--4 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 3;
-  grid-row-end: 6;
-
-
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 3;
+	grid-row-end: 6;
 }
 
 .gallery__item--5 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 6;
-  grid-row-end: 9;
-
-
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 6;
+	grid-row-end: 9;
 }
 
 .gallery__item--6 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 6;
-  grid-row-end: 9;
-
-
+	grid-column-start: 5;
+	grid-column-end: 9;
+	grid-row-start: 6;
+	grid-row-end: 9;
 }
