logo change, style.css change

--- a/css/style2.css
+++ b/css/style2.css
@@ -1,96 +1,105 @@
-*,*::after,*::before{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
-html{
- /* 1rem = 10px */
- font-size: 62.5%; 
- overflow-x: hidden;
+html {
+	/* 1rem = 10px */
+	font-size: 62.5%;
+	overflow-x: hidden;
 }
-body{
-    overflow-x: hidden;
-
+body {
+	overflow-x: hidden;
 }
-.navigation{
-
+.navigation {
+	padding-top: 3rem;
 }
-.navigation__list{
-    display:flex;
-flex-direction: row;
-align-items: top;
-justify-content: center;
-}
-
-.navigation__item{
-    border: solid black 1px;
-   display: inline-block;
-   transition: all .3s  linear;
-   background-image: linear-gradient(
-			to bottom,
-			rgba(53, 151, 255, 0.7),
-			rgba(11, 243, 30, 0.1)
-		);
-        height: fit-content;
-        text-align: center;
-}
-.navigation__item:hover{
-background-image: linear-gradient(
-			to top,
-			rgba(53, 124, 255, 0.7),
-			rgba(243, 11, 11, 0.1)
-		)
-    }
-    .navigation__link{
-        position: relative;
-        display: block;
- padding:1rem 3rem;
-    }
-.navigation__link:link,.navigation__link:visited{
-    text-decoration: none;
-color: black;
-text-transform: uppercase;
-   
-
-}
-.navigation__link:hover,.navigation__link:active{
- 
-color: blue;
-}
-.dropmenu{
-    position: relative;
-  height: 0;
-  overflow-y: hidden;
-}
-.dropmenu__item{
-    display: inline-block;
-    list-style: none;
-    width: 100%;
-    height: 60%;
-}
-.dropmenu__item{
-    border-top: solid black .1rem;
-}
-.dropmenu__link{
-    display: inline-block;padding: .3rem;
-width: 100%;
-
-}
-.dropmenu__link:link, .dropmenu__link:visited{
-color: black;
-text-decoration: none;
-text-transform: uppercase;
-text-align: center;
-text-justify: center;
-}
-.dropmenu__link:hover, .dropmenu__link:active{
-text-decoration: none;
-text-transform: uppercase;
-text-align: center;
-text-justify: center;
-background-color: bisque;
+.navigation__list {
+	display: flex;
+	flex-direction: row;
+	align-items: top;
+	justify-content: center;
 }
 
-.active{
-    height:auto;
+.navigation__item {
+	border: solid black 1px;
+	display: inline-block;
+	transition: all 0.3s ease-out;
+	background-image: linear-gradient(
+		to left,
+		rgba(12, 207, 6, 0.973),
+		rgb(25, 71, 0)
+	);
+	/* background-color: rgba(53, 124, 255, 0.8); */
+	background-size: 30vw 30vw;
+	background-position: right;
+
+	height: fit-content;
+	text-align: center;
+}
+.navigation__item:hover {
+	background-image: linear-gradient(
+		to right,
+		rgba(12, 207, 6, 0.973),
+		rgb(25, 71, 0)
+	);
+	background-position: left;
+}
+.navigation__link {
+	position: relative;
+	display: block;
+	padding: 1rem 3rem;
+}
+.navigation__link:link,
+.navigation__link:visited {
+	text-decoration: none;
+	color: white;
+	text-transform: uppercase;
+}
+.navigation__link:hover,
+.navigation__link:active {
+	color: wheat;
+}
+.dropmenu {
+	position: relative;
+	height: 0;
+	overflow-y: hidden;
+}
+.dropmenu__item {
+	display: inline-block;
+	list-style: none;
+	width: 100%;
+	height: 60%;
+}
+.dropmenu__item {
+	border-top: solid black 0.1rem;
+}
+.dropmenu__link {
+	display: inline-block;
+	padding: 0.3rem;
+	width: 100%;
+}
+.dropmenu__link:link,
+.dropmenu__link:visited {
+	color: black;
+	background-color: transparent;
+	transition: all 0.3s ease-out;
+	text-decoration: none;
+	text-transform: uppercase;
+	text-align: center;
+	text-justify: center;
+}
+.dropmenu__link:hover,
+.dropmenu__link:active {
+	text-decoration: none;
+	text-transform: uppercase;
+	text-align: center;
+	text-justify: center;
+	background-color: bisque;
+}
+
+.active {
+	height: auto;
 }
