--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,7 @@
 }
 
 .footer {
+	color: #fff;
 	box-shadow: 0 -0.2rem 2rem #000;
 	position: static;
 	width: 100vw;
@@ -166,8 +167,9 @@
 .footer__item:not(:last-child) {
 	margin-right: 1.5rem;
 }
-.footer__link {
+.footer__link:link,.footer__link:visited {
 	transition: all 0.2s ease;
+	color: #fff;
 }
 .footer__link i {
 	display: inline-block;
@@ -206,7 +208,7 @@
 }
 .footer__copyright-text {
 	width: 80%;
-	color: #000;
+	color: #fff;
 	line-height: 2;
 }
 @media only screen and (max-width: 75em) {
@@ -1054,10 +1056,9 @@ section:not(:last-child) {
 		background-color: rgba(34, 0, 255, 0.8);
 	}
 	.header {
-		-webkit-clip-path: polygon(0 0, 100% 0, 100% 13vh, 0 100%);
-		clip-path: polygon(0 0, 100% 0, 100% 13vh, 0 100%);
-		height: 15vh;
-		transition: all 200ms ease;
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 19rem, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 12rem, 0 100%);
+		transition: all .2s ease;
 	}
 	.header__logo-box {
 		position: absolute;
