--- a/css/style.css
+++ b/css/style.css
@@ -65,18 +65,37 @@
 	text-align: center;
 	align-items: center;
 	justify-content: space-between;
-	background-image: linear-gradient(
-			to bottom,
-			rgba(0, 71, 171, 0.7),
-			rgba(49, 133, 252, 0.1)
-		),
-		url(https://images.unsplash.com/photo-1597227093570-eccc70d8a416?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
+	background-image: linear-gradient(to bottom, rgb(0, 36, 87), rgb(0, 45, 108));
 	background-size: cover;
 	background-position: center center;
 	-webkit-clip-path: polygon(0 0, 100% 0, 100% 15vh, 0 100%);
 	clip-path: polygon(0 0, 100% 0, 100% 19vh, 0 100%);
 	height: 20vh;
 }
+.header__contactbar {
+	position: relative;
+	z-index: inherit;
+	width: 100%;
+	height: auto;
+	background-color: black;
+}
+.header__contact-list {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-evenly;
+}
+.contact-list__item {
+	display: inline-block;
+}
+.contact-list__link:link,
+.contact-list__link:visited {
+	color: white;
+	text-decoration: none;
+	font-size: 1.5rem;
+}
+
 .header__logo-box {
 	position: static;
 	top: 0.5rem;
@@ -114,6 +133,8 @@
 }
 
 .footer {
+	font-family: "Bebas Neue", Sans-serif;
+
 	color: #fff;
 	box-shadow: 0 -0.2rem 2rem #000;
 	position: static;
@@ -167,7 +188,8 @@
 .footer__item:not(:last-child) {
 	margin-right: 1.5rem;
 }
-.footer__link:link,.footer__link:visited {
+.footer__link:link,
+.footer__link:visited {
 	transition: all 0.2s ease;
 	color: #fff;
 }
@@ -1058,7 +1080,7 @@ section:not(:last-child) {
 	.header {
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 19rem, 0 100%);
 		clip-path: polygon(0 0, 100% 0, 100% 12rem, 0 100%);
-		transition: all .2s ease;
+		transition: all 0.2s ease;
 	}
 	.header__logo-box {
 		position: absolute;
@@ -1104,7 +1126,7 @@ section:not(:last-child) {
 }
 
 body {
-	font-family: "Lato", sans-serif;
+	font-family: "Bebas Neue", Sans-serif;
 	font-weight: 400;
 	line-height: 1.7;
 	overflow-x: hidden;
