--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@
 	font-size: 1.5rem;
 }
 
+
 .header__logo-box {
 	position: static;
 	top: 0.5rem;
@@ -145,12 +146,8 @@
 	flex-direction: column;
 	align-items: center;
 	background-color: #ff7730;
-	background-image: linear-gradient(
-			to bottom,
-			rgba(0, 71, 171, 0.7),
-			rgba(49, 133, 252, 0.1)
-		),
-		url(https://images.unsplash.com/photo-1597227093570-eccc70d8a416?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
+	background-image: linear-gradient(to bottom, rgb(0, 36, 87), rgb(0, 45, 108));
+
 	padding: 2rem 2rem;
 	margin-top: -1rem;
 	font-size: 1.4rem;
