--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
 	text-align: center;
 	align-items: center;
 	justify-content: space-between;
-	background-image: linear-gradient(to bottom, rgb(0, 36, 87), rgb(0, 45, 108));
+	background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 14, 34));
 	background-size: cover;
 	background-position: center center;
 	-webkit-clip-path: polygon(0 0, 100% 0, 100% 15vh, 0 100%);
@@ -77,7 +77,7 @@
 	z-index: inherit;
 	width: 100%;
 	height: auto;
-	background-color: black;
+	background-color: rgba(0, 0, 0, 0.634);
 }
 .header__contact-list {
 	display: flex;
@@ -95,7 +95,6 @@
 	text-decoration: none;
 	font-size: 1.5rem;
 }
-
 
 .header__logo-box {
 	position: static;
@@ -146,7 +145,7 @@
 	flex-direction: column;
 	align-items: center;
 	background-color: #ff7730;
-	background-image: linear-gradient(to bottom, rgb(0, 36, 87), rgb(0, 45, 108));
+	background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 14, 34));
 
 	padding: 2rem 2rem;
 	margin-top: -1rem;
