--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,13 @@
 	color: white;
 	text-decoration: none;
 	font-size: 1.5rem;
+	transition: color 0.3s ease;
+	border-bottom: solid transparent 0.2rem;
+}
+.contact-list__link:hover,
+.contact-list__link:active {
+	color: greenyellow;
+	border-bottom: solid greenyellow 0.2rem;
 }
 
 .header__logo-box {
@@ -202,7 +209,7 @@
 }
 .footer__link:link,
 .footer__link:visited {
-	color: #000;
+	color: #fff;
 	text-decoration: none;
 	text-transform: uppercase;
 	display: inline-block;
@@ -800,10 +807,15 @@
 .section-articles .heading-secondary {
 	grid-column: 1/-1;
 }
+.map{
+	 width:100%;
+	 height:45rem;
+}
 @media only screen and (max-width: 75em) {
 	.section-articles {
 		width: 100vw;
 	}
+
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -812,12 +824,14 @@
 	}
 }
 
+
 .section-adress {
 	background-color: rgba(247, 247, 247, 0.95);
 	width: 90vw;
 	margin: 0rem auto;
 	padding: 3rem 5rem;
-	min-height: 85vh;
+	min-height: auto;
+	align-items: flex-start;
 }
 
 .main-container {
@@ -1117,7 +1131,7 @@ section:not(:last-child) {
 	.header.active {
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 42vh, 0 100%);
 		clip-path: polygon(0 0, 100% 0, 100% 42vh, 0 100%);
-		height: 48vh;
+		height: 55vh;
 	}
 }
 
