content update, fix index about col

--- a/css/style.css
+++ b/css/style.css
@@ -807,15 +807,14 @@
 .section-articles .heading-secondary {
 	grid-column: 1/-1;
 }
-.map{
-	 width:100%;
-	 height:45rem;
+.map {
+	width: 100%;
+	height: 45rem;
 }
 @media only screen and (max-width: 75em) {
 	.section-articles {
 		width: 100vw;
 	}
-
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -823,7 +822,6 @@
 		padding: 2rem 0;
 	}
 }
-
 
 .section-adress {
 	background-color: rgba(247, 247, 247, 0.95);
@@ -1225,6 +1223,7 @@ body {
 	overflow-y: hidden;
 	line-height: 1.5;
 	margin: auto 0;
+	padding: 1rem;
 }
 .paragraph:not(:last-child) {
 	margin-bottom: 3rem;
