--- a/css/style.css
+++ b/css/style.css
@@ -1218,7 +1218,7 @@ body {
 }
 
 .paragraph {
-	text-align: center;
+	text-align: justify;
 	font-size: 2.4rem;
 	overflow-y: hidden;
 	line-height: 1.5;
