--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,50 @@
 	background-size: cover;
 	background-position: center center;
 }
+
+.banner {
+	position: relative;
+	width: 100vw;
+	height: 60vh;
+	margin-top: -5rem;
+	background-image: url(/img/banner_background.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	z-index: 1;
+	filter: blur(3px) contrast(50%);
+	margin-bottom: 5rem;
+}
+.banner__text {
+	position: absolute;
+	text-transform: uppercase;
+	color: white;
+	text-shadow: 0.2rem 0.3rem rgba(0, 0, 0, 0.8);
+	font-size: 3rem;
+	z-index: 100;
+	top: 40%;
+	width: 100%;
+	transform: translateX(-50%);
+	animation: banner 1s forwards;
+	opacity: 0;
+}
+
+@keyframes banner {
+	0% {
+		left: 0;
+		opacity: 0;
+	}
+	60% {
+		left: 53%;
+		opacity: 0.8;
+	}
+	100% {
+		opacity: 1;
+		/* transform: translateX(50%); */
+		left: 50%;
+	}
+}
+
 .footer__columns {
 	display: flex;
 	flex-direction: row;
@@ -678,7 +722,8 @@
 	list-style: none;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: left;
+	margin-left: 3rem;
 }
 
 .adress__item {
@@ -1089,6 +1134,7 @@ section:not(:last-child) {
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 19rem, 0 100%);
 		clip-path: polygon(0 0, 100% 0, 100% 12rem, 0 100%);
 		transition: all 0.2s ease;
+		z-index: 100;
 	}
 	.header__logo-box {
 		position: absolute;
@@ -1181,11 +1227,13 @@ body {
 	transition: all 0.2s ease;
 	letter-spacing: 2px;
 }
+
 @supports (-webkit-background-clip: text) {
 	.heading-secondary {
 		background-image: linear-gradient(to right, #c5deff, #000000);
 		-webkit-background-clip: text;
 		color: transparent;
+		filter: blur(0);
 	}
 }
 .heading-secondary:hover {
@@ -1330,20 +1378,18 @@ body {
 
 .container {
 	width: 80vw;
-	margin: 4rem auto;
+	margin: 0 auto 5rem;
 }
 
 .gallery {
-	display: grid;
-	grid-template-columns: repeat(8, 1fr);
-	grid-template-rows: repeat(8, 5vw);
-	grid-gap: 1.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .gallery__img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+	width: 70vw;
+	height: auto;
 	display: block;
 }
 
