--- a/css/style.css
+++ b/css/style.css
@@ -862,6 +862,9 @@
 	.section-about {
 		width: 100vw;
 	}
+	.paragraph {
+		padding: 0;
+	}
 }
 
 .section-features {
@@ -1327,6 +1330,11 @@ body {
 	display: inline-block;
 	height: 10rem;
 	overflow-y: hidden;
+}
+@media only screen and (max-width: 75em) {
+	.paragraph {
+		padding: 0;
+	}
 }
 
 .u-center-text {
